jade-validate/src/emulators/perfect6502/bindings.rs

/* automatically generated by rust-bindgen 0.71.1 */

unsafe extern "C" {
    pub fn initAndResetChip() -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn destroyChip(state: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn step(state: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn chipStatus(state: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn readPC(state: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_ushort;
}
unsafe extern "C" {
    pub fn readA(state: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_uchar;
}
unsafe extern "C" {
    pub fn readX(state: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_uchar;
}
unsafe extern "C" {
    pub fn readY(state: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_uchar;
}
unsafe extern "C" {
    pub fn readSP(state: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_uchar;
}
unsafe extern "C" {
    pub fn readP(state: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_uchar;
}
unsafe extern "C" {
    pub fn readRW(state: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_uint;
}
unsafe extern "C" {
    pub fn readAddressBus(state: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_ushort;
}
unsafe extern "C" {
    pub fn writeDataBus(state: *mut ::std::os::raw::c_void, arg1: ::std::os::raw::c_uchar);
}
unsafe extern "C" {
    pub fn readDataBus(state: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_uchar;
}
unsafe extern "C" {
    pub fn readIR(state: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_uchar;
}
unsafe extern "C" {
    pub fn setIrq(state: *mut ::std::os::raw::c_void, val: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn setNmi(state: *mut ::std::os::raw::c_void, val: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub static mut memory: [::std::os::raw::c_uchar; 65536usize];
}
unsafe extern "C" {
    pub static mut cycle: ::std::os::raw::c_uint;
}
unsafe extern "C" {
    pub static mut transistors: ::std::os::raw::c_uint;
}
